--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
-		"prettier-plugin-organize-imports": "^3.2.2",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"publint": "^0.1.9",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.2",
+		"tailwindcss-animate": "^1.0.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
